# nlgames

./: LICENSE  README.md  presentation.md  pyproject.toml  quick_test.py
nlgames/: Xorgame.py  scratchpad.md
src/nlgames/: scratchpad.md  xorgames.py
tests/: test_xorgames.py
