[build-system]
requires = ["hatchling", "numpy", "cvxpy", "pytest", "ortools<=9.4.1874"]
build-backend = "hatchling.build"

[project]
name = "nlgames"
version = "0.0.3"
authors = [
    { name="Julius Weisser", email="julius.weisser@warwick.ac.uk" },
]
description = "Tools for the analysis of nonlocal games"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "cvxpy",
    "pytest",
    "ortools<=9.4.1874"
]

[project.urls]
"Homepage" = "https://github.com/juliusw352/nlgames"
"Bug Tracker" = "https://github.com/juliusw352/nlgames/issues"
